// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="default"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="default_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="default_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.addItemButton: title: Add new Item - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.addItemButton: title: Add new Item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.addItemButton: title: Add new Item_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addItemButton: title: Add new Item_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add new Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.addToFront: true - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.addToFront: true"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn emotion-1"
        id="properties.addToFront: true_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addToFront: true_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.hideAddButton: true - value[0] 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.hideAddButton: true"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render properties.noDataTitle: No title display - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.noDataTitle: No title display"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No title display
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.noDataTitle: No title display_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.noDataTitle: No title display_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.removeItemIcon: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.removeItemIcon: name: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: name: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: name: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: name: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.size: large - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: large"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-lg emotion-1"
        id="properties.size: large_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: large_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.size: small - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: small"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-sm emotion-1"
        id="properties.size: small_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: small_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.title"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <span
        class="ant-typography"
      >
        <strong>
          ControlledList block
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-2"
        id="properties.title_add_button"
        type="button"
      >
        <svg
          class="emotion-3"
          data-testid="AiOutlineExclamationCircle"
          id="properties.title_add_button_icon"
        />
        <span
          class="emotion-3"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="default"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="default_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="default_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.addItemButton: title: Add new Item - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.addItemButton: title: Add new Item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.addItemButton: title: Add new Item_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addItemButton: title: Add new Item_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add new Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.addToFront: true - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.addToFront: true"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn emotion-1"
        id="properties.addToFront: true_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addToFront: true_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.hideAddButton: true - value[0] 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.hideAddButton: true"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.noDataTitle: No title display - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.noDataTitle: No title display"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No title display
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.noDataTitle: No title display_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.noDataTitle: No title display_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.removeItemIcon: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.removeItemIcon: name: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: name: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: name: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: name: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.size: large - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: large"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-lg emotion-1"
        id="properties.size: large_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: large_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.size: small - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: small"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-sm emotion-1"
        id="properties.size: small_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: small_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render required = true properties.title - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.title"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <span
        class="ant-typography"
      >
        <strong>
          ControlledList block
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-2"
        id="properties.title_add_button"
        type="button"
      >
        <svg
          class="emotion-3"
          data-testid="AiOutlineExclamationCircle"
          id="properties.title_add_button_icon"
        />
        <span
          class="emotion-3"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error default - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="default"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="default_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="default_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.addItemButton: title: Add new Item - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.addItemButton: title: Add new Item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.addItemButton: title: Add new Item_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addItemButton: title: Add new Item_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add new Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.addToFront: true - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.addToFront: true"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn emotion-1"
        id="properties.addToFront: true_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addToFront: true_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.hideAddButton: true - value[0] 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.hideAddButton: true"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.noDataTitle: No title display - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.noDataTitle: No title display"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No title display
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.noDataTitle: No title display_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.noDataTitle: No title display_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.removeItemIcon: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.removeItemIcon: name: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: name: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: name: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: name: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.size: large - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: large"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-lg emotion-1"
        id="properties.size: large_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: large_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.size: small - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: small"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-sm emotion-1"
        id="properties.size: small_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: small_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = error properties.title - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.title"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <span
        class="ant-typography"
      >
        <strong>
          ControlledList block
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-2"
        id="properties.title_add_button"
        type="button"
      >
        <svg
          class="emotion-3"
          data-testid="AiOutlineExclamationCircle"
          id="properties.title_add_button_icon"
        />
        <span
          class="emotion-3"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null default - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="default"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="default_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="default_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.addItemButton: title: Add new Item - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.addItemButton: title: Add new Item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.addItemButton: title: Add new Item_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addItemButton: title: Add new Item_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add new Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.addToFront: true - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.addToFront: true"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn emotion-1"
        id="properties.addToFront: true_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addToFront: true_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.hideAddButton: true - value[0] 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.hideAddButton: true"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.noDataTitle: No title display - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.noDataTitle: No title display"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No title display
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.noDataTitle: No title display_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.noDataTitle: No title display_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.removeItemIcon: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.removeItemIcon: name: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: name: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: name: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: name: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.size: large - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: large"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-lg emotion-1"
        id="properties.size: large_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: large_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.size: small - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: small"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-sm emotion-1"
        id="properties.size: small_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: small_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = null properties.title - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.title"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <span
        class="ant-typography"
      >
        <strong>
          ControlledList block
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-2"
        id="properties.title_add_button"
        type="button"
      >
        <svg
          class="emotion-3"
          data-testid="AiOutlineExclamationCircle"
          id="properties.title_add_button_icon"
        />
        <span
          class="emotion-3"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success default - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="default"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="default_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="default_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.addItemButton: title: Add new Item - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.addItemButton: title: Add new Item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.addItemButton: title: Add new Item_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addItemButton: title: Add new Item_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add new Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.addToFront: true - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.addToFront: true"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn emotion-1"
        id="properties.addToFront: true_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addToFront: true_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.hideAddButton: true - value[0] 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.hideAddButton: true"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.noDataTitle: No title display - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.noDataTitle: No title display"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No title display
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.noDataTitle: No title display_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.noDataTitle: No title display_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.removeItemIcon: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.removeItemIcon: name: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: name: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: name: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: name: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.size: large - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: large"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-lg emotion-1"
        id="properties.size: large_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: large_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.size: small - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: small"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-sm emotion-1"
        id="properties.size: small_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: small_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = success properties.title - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.title"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <span
        class="ant-typography"
      >
        <strong>
          ControlledList block
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-2"
        id="properties.title_add_button"
        type="button"
      >
        <svg
          class="emotion-3"
          data-testid="AiOutlineExclamationCircle"
          id="properties.title_add_button_icon"
        />
        <span
          class="emotion-3"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning default - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="default"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="default_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="default_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.addItemButton: title: Add new Item - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.addItemButton: title: Add new Item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.addItemButton: title: Add new Item_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addItemButton: title: Add new Item_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add new Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.addToFront: true - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.addToFront: true"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn emotion-1"
        id="properties.addToFront: true_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.addToFront: true_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.hideAddButton: true - value[0] 1`] = `
<div
  class="ant-list ant-list-split ant-list-bordered"
  id="properties.hideAddButton: true"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.noDataTitle: No title display - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.noDataTitle: No title display"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No title display
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.noDataTitle: No title display_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.noDataTitle: No title display_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.removeItemIcon: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.removeItemIcon: name: DeleteOutlined - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.removeItemIcon: name: DeleteOutlined"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-1"
        id="properties.removeItemIcon: name: DeleteOutlined_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.removeItemIcon: name: DeleteOutlined_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.size: large - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: large"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-lg emotion-1"
        id="properties.size: large_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: large_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.size: small - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.size: small"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed ant-btn-sm emotion-1"
        id="properties.size: small_add_button"
        type="button"
      >
        <svg
          class="emotion-2"
          data-testid="AiOutlineExclamationCircle"
          id="properties.size: small_add_button_icon"
        />
        <span
          class="emotion-2"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Render validation.status = warning properties.title - value[0] 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

<div
  class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  id="properties.title"
>
  <div
    class="ant-list-header"
  >
    <div
      class="emotion-0"
    >
      <span
        class="ant-typography"
      >
        <strong>
          ControlledList block
        </strong>
      </span>
    </div>
  </div>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-empty-text"
      >
        No Items
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div
      class="emotion-0"
    >
      <br />
      <button
        class="ant-btn ant-btn-dashed emotion-2"
        id="properties.title_add_button"
        type="button"
      >
        <svg
          class="emotion-3"
          data-testid="AiOutlineExclamationCircle"
          id="properties.title_add_button_icon"
        />
        <span
          class="emotion-3"
        >
          Add Item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.addItemButton: title: Add new Item 1`] = `true`;

exports[`Test Schema properties.addItemButton: title: Add new Item 2`] = `null`;

exports[`Test Schema properties.addToFront: true 1`] = `true`;

exports[`Test Schema properties.addToFront: true 2`] = `null`;

exports[`Test Schema properties.hideAddButton: true 1`] = `true`;

exports[`Test Schema properties.hideAddButton: true 2`] = `null`;

exports[`Test Schema properties.noDataTitle: No title display 1`] = `true`;

exports[`Test Schema properties.noDataTitle: No title display 2`] = `null`;

exports[`Test Schema properties.removeItemIcon: DeleteOutlined 1`] = `true`;

exports[`Test Schema properties.removeItemIcon: DeleteOutlined 2`] = `null`;

exports[`Test Schema properties.removeItemIcon: name: DeleteOutlined 1`] = `true`;

exports[`Test Schema properties.removeItemIcon: name: DeleteOutlined 2`] = `null`;

exports[`Test Schema properties.size: large 1`] = `true`;

exports[`Test Schema properties.size: large 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;
